# FinalProject

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum
cmd/server/: main.go
docs/: CLOUD_READINESS.md  ERD.md  docs.go  openapi.yaml  redoc.html  scalar.html  swagger.html
internal/api/: docs.go  docs_routes_test.go  router.go  router_test.go
internal/api/handler/: handler.go  problems.go  stats.go  submissions.go  users.go  util.go
internal/api/middleware/: auth.go
internal/archive/: archive.go  archive_test.go
internal/auth/: jwt.go  jwt_test.go
internal/config/: config.go  config_test.go
internal/judge/: docker.go  engine.go  pipeline.go  status.go  status_test.go
internal/model/: model.go
internal/store/: id.go  store.go
problems/113final001/: CMakeLists.txt
problems/113final001/cmake/: AddJudge.cmake
problems/113final001/solution/: Complex.cpp  case.h
problems/113final001/spec/: case1.h  case2.h  case3.h  case4.h  case5.h
problems/113final001/template/: Complex.h
problems/113final003/: CMakeLists.txt
problems/113final003/solution/: School.h  case.h
problems/113final003/spec/: case1.h  case2.h  case3.h  case4.h  case5.h
problems/113final003/template/: School.h  case.h  (+1 more)
problems/113final004/: CMakeLists.txt
problems/113final005/: CMakeLists.txt
problems/113final006/: CMakeLists.txt
problems/113final006/solution/: CMakeLists.txt  entrypoint.cpp
problems/113final006/solution/include/: operator.h  variable.h
problems/113final006/solution/runtime/: core.h
scripts/: gen_keys.sh
(+37 files in other folders)
